--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,9 @@
 @import './transition.scss';
 @import './element-ui.scss';
 @import './sidebar.scss';
+// 引入 common.scss样式表
+@import './common.scss';
+
 
 body {
   height: 100%;
